--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ VLINK = "Blue">
 Когда запрашивается номер карты НЕ НУЖНО скидывать секретные данные, достаточно только первых четырёх цифр из 16-ти значного номера.</BR>
 В случае неправильности решения, сообщите об этом по номеру телефона: +79851625561. Резервный номер: +79152668299. Возврат денег с комиссией 2₽. Если Вы позвонили, а решение оказалось правильным, с Вас требуется комиссия 2₽.</BR>
 За дополнительные требования к задаче с Вас требуется дополнительная плата 1₽.</BR>
-Оплата осуществляется следующим образом: <ol><li>подсчитайте сумму в ₽, которую стоит Ваш вопрос.</li><li>Нажмите на кнопку предмета, по которому у Вас задание.</li><li>Вам выйдет 2 номера телефона. Напишите на первый номер через WhatsApp, если у Вас его нет, позвоните на этот номер. Если нет ответа, то сделайте то же самое со вторым (резервным) номером.</li><li>Оплата осуществляется картой. Номер карты выйдет вместе с номерами.</li></P>
+Оплата осуществляется следующим образом: <ol><li>подсчитайте сумму в ₽, которую стоит Ваш вопрос.</li><li>Нажмите на кнопку предмета, по которому у Вас задание.</li><li>Вам выйдет 2 номера телефона. Напишите на первый номер через WhatsApp, если у Вас его нет, позвоните на этот номер. Если нет ответа, то сделайте то же самое со вторым (резервным) номером.</li><li>Оплата осуществляется по номеру телефона. Сумму надо переводить на первый номер (через приложение какого-либо банка).</li></P>
 </BR>
 <P ALIGN = CENTER>Creator: Dreiblatte Ivan Alexandrovich</P>
 <P ALIGN = CENTER>© 2022-2022</P>
