--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 </HEAD>
 <BODY
 ALINK = "Blue"
-VLINK = "Blue">
+VLINK = "Blue"
+META CHARSET = "UTF-8">
 <H1 ALIGN = "CENTER">Выберите предмет</H1>
 <HR COLOR = "GRAY">
 <DIV STYLE = "background-color: #c8c8c8; color: blue;" onclick="alert('Напишите/позвоните на номер +79851625561. Резервный: +79152668299')"><H1 ALIGN = "CENTER" COLOR = "BLUE">Математика</H1><H2 ALIGN = "CENTER">Цена за пример/уравнение: 5₽. Цена за простую задачу: 5₽. Цена за сложную задачу: 10₽ Цена за ДКР: 15₽.</H2></DIV>
@@ -49,7 +50,7 @@ VLINK = "Blue">
    document.getElementById("result").innerHTML = result;
  }
 </script>
-<HR COLOR = "GRAY" SIZE = "5">
+<HR COLOR = "GRAY" SIZE = "5" CLASS = "FSIZE">
 </BR>
 </BR>
 <P ALIGN = "CENTER">Используя сайт, вы соглашаетесь на следующее:
