--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <HTML>
 <HEAD>
 <TITLE>ГДЗ от 1 по 7 класс</TITLE>
+META CHARSET = "UTF-8"
 </HEAD>
 <BODY
 ALINK = "Blue"
-VLINK = "Blue"
-META CHARSET = "UTF-8">
+VLINK = "Blue">
 <H1 ALIGN = "CENTER">Выберите предмет</H1>
-<HR COLOR = "GRAY">
+<HR>
 <DIV STYLE = "background-color: #c8c8c8; color: blue;" onclick="alert('Напишите/позвоните на номер +79851625561. Резервный: +79152668299')"><H1 ALIGN = "CENTER" COLOR = "BLUE">Математика</H1><H2 ALIGN = "CENTER">Цена за пример/уравнение: 5₽. Цена за простую задачу: 5₽. Цена за сложную задачу: 10₽ Цена за ДКР: 15₽.</H2></DIV>
 <DIV STYLE = "background-color: #c8c8c8; color: red;" onclick="alert('Напишите/позвоните на номер +79851625561. Резервный: +79152668299')"><H1 ALIGN = "CENTER" COLOR = "RED">Алгебра</H1><H2 ALIGN = "CENTER">Цена за пример/уравнение/составление уравнения и т. д.: 5₽. Цена за задачу: 6₽. Цена за построение координатной плоскости: 4₽. Цена за ДКР: 15₽.</H2></DIV>
 <DIV STYLE = "background-color: #c8c8c8; color: green;" onclick="alert('Напишите/позвоните на номер +79851625561. Резервный: +79152668299')"><H1 ALIGN = "CENTER" COLOR = "GREEN">Русский язык</H1><H2 ALIGN = "CENTER">Цена за корректирование/вставление буквы/подпись характеристик слова: 5₽. При прибавлении слова цена увеличивается на 2₽. Цена за 1/2/3 разбор слова или 4 разбор предложения: 7₽. Цена за сочинение/изложение: 12₽. Цена за ДКР: 15₽.</H2></DIV>
-<HR COLOR = "GRAY">
+<HR>
 <H1 ALIGN = "CENTER">Скоро будет геометрия!</H1>
-<HR COLOR = "GRAY">
+<HR>
 Также, для удобства, здесь есть калькулятор. Вот он:
 </BR>
 <input id="num1" />
@@ -50,16 +50,16 @@ META CHARSET = "UTF-8">
    document.getElementById("result").innerHTML = result;
  }
 </script>
-<HR COLOR = "GRAY" SIZE = "5" CLASS = "FSIZE">
-</BR>
-</BR>
+<HR CLASS = "FSIZE">
+<BR>
+<BR>
 <P ALIGN = "CENTER">Используя сайт, вы соглашаетесь на следующее:
-</BR>
-Сайт ТОЛЬКО на русском языке.</BR>
-В случае неправильности решения, сообщите об этом по номеру телефона: +79851625561. Резервный номер: +79152668299. Возврат денег с комиссией 2₽. Если Вы позвонили, а решение оказалось правильным, с Вас требуется комиссия 2₽.</BR>
-За дополнительные требования к задаче с Вас требуется дополнительная плата 1₽.</BR>
+<BR>
+Сайт ТОЛЬКО на русском языке.<BR>
+В случае неправильности решения, сообщите об этом по номеру телефона: +79851625561. Резервный номер: +79152668299. Возврат денег с комиссией 2₽. Если Вы позвонили, а решение оказалось правильным, с Вас требуется комиссия 2₽.<BR>
+За дополнительные требования к задаче с Вас требуется дополнительная плата 1₽.<BR>
 Оплата осуществляется следующим образом: <ol><li>Подсчитайте сумму в ₽, которую стоит Ваш вопрос.</li><li>Нажмите на кнопку предмета, по которому у Вас задание.</li><li>Вам выйдет 2 номера телефона. Напишите на первый номер через WhatsApp, если у Вас его нет, позвоните на этот номер. Если нет ответа, то сделайте то же самое со вторым (резервным) номером.</li><li>Оплата осуществляется по номеру телефона. Сумму надо переводить на первый номер (через приложение какого-либо банка).</li></P>
-</BR>
+<BR>
 <P ALIGN = CENTER>Creator: Dreiblatte Ivan Alexandrovich</P>
 <P ALIGN = CENTER>© 2022-2023</P>
 </BODY>
