--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <HTML>
 <HEAD>
 <TITLE>ГДЗ от 1 по 7 класс</TITLE>
-META CHARSET = "UTF-8"
+<META CHARSET = "UTF-8">
 <link rel="stylesheet" href="style.css">
 </HEAD>
 <BODY
