--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <HEAD>
 <TITLE>ГДЗ от 1 по 7 класс</TITLE>
 <META CHARSET = "UTF-8">
-<link rel="stylesheet" href="style.css" type="text/css">
+<link rel="stylesheet" href="style.css" type="css">
 </HEAD>
 <BODY
 ALINK = "Blue"
