--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@ VLINK = "Blue">
 <DIV CLASS = "maths" onclick = "alert('Напишите/позвоните на номер +79851625561. Резервный: +79152668299')"><H1>Математика</H1><H2>Цена за пример/уравнение: 5₽. Цена за простую задачу: 5₽. Цена за сложную задачу: 10₽. Цена за ДКР: 15₽.</H2></DIV>
 <DIV CLASS = "algebra" onclick = "alert('Напишите/позвоните на номер +79851625561. Резервный: +79152668299')"><H1>Алгебра</H1><H2>Цена за пример/уравнение/составление уравнения и т. д.: 5₽. Цена за задачу: 6₽. Цена за построение координатной плоскости: 4₽. Цена за ДКР: 15₽.</H2></DIV>
 <DIV CLASS = "russian" onclick = "alert('Напишите/позвоните на номер +79851625561. Резервный: +79152668299')"><H1>Русский язык</H1><H2>Цена за корректирование/вставление буквы/подпись характеристик слова: 5₽. При прибавлении слова цена увеличивается на 2₽. Цена за 1/2/3 разбор слова или 4 разбор предложения: 7₽. Цена за сочинение/изложение: 12₽. Цена за ДКР: 15₽.</H2></DIV>
-<DIV CLASS = "chemistry" onclick = "alert('Напишите/позвоните на номер +79851625561. Резервный: +79152668299')"><H1>Химия</H1><H2>Цена за уравнение реакции/определения его типа/уравнивание частей: 5₽. Цена за простую химическую задачу: 6₽. Цена за сложную химическую задачу: 10₽. Цена за задачу на определение валентности/простановление по ней коэффициентов в элементе: 4₽.</H2></DIV>
+<DIV CLASS = "chemistry" onclick = "alert('Напишите/позвоните на номер +79851625561. Резервный: +79152668299')"><H1>Химия</H1><H2>Цена за уравнение реакции/определения его типа/уравнивание частей: 5₽. Цена за простую химическую задачу: 6₽. Цена за сложную химическую задачу: 10₽. Цена за задачу на определение валентности/простановление по ней коэффициентов в элементе: 4₽. Цена за ДКР: 15₽.</H2></DIV>
+<DIV CLASS = "geometry" onclick = "alert('Напишите/позвоните на номер +79851625561. Резервный: +79152668299')"><H1>Геометрия</H1><H2>Цена за решение простой задачи: 6₽. Цена за решение сложной задачи: 10₽. Цена за доказательство теоремы: 11₽. Цена за ДКР: 15₽.</H2></DIV>
 <HR>
 <H1>Скоро будет геометрия!</H1>
 <HR>
 Также, для удобства, здесь есть калькулятор. Вот он:
-</BR>
+<BR>
 <input id="num1" />
 <div id="operator_btns">
  <button id="plus" onclick="op='+'">+</button>
@@ -52,16 +53,16 @@ VLINK = "Blue">
  }
 </script>
 <HR CLASS = "fsize">
-</BR>
-</BR>
+<BR>
+<BR>
 <P>Используя сайт, вы соглашаетесь на следующее:
-</BR>
-Сайт ТОЛЬКО на русском языке.</BR>
+<BR>
+Сайт ТОЛЬКО на русском языке.<BR>
 Когда запрашивается номер карты НЕ НУЖНО скидывать секретные данные, достаточно только первых четырёх цифр из 16-ти значного номера.</BR>
 В случае неправильности решения, сообщите об этом по номеру телефона: +79851625561. Резервный номер: +79152668299. Возврат денег с комиссией 2₽. Если Вы позвонили, а решение оказалось правильным, с Вас требуется комиссия 2₽.</BR>
 За дополнительные требования к задаче с Вас требуется дополнительная плата 1₽.</BR>
 Оплата осуществляется следующим образом:<OL><LI>Подсчитайте сумму в ₽, которую стоит Ваш вопрос.</LI><LI>Нажмите на кнопку предмета, по которому у Вас задание.</LI><LI>Вам выйдет 2 номера телефона. Напишите на первый номер через WhatsApp, если у Вас его нет, позвоните на этот номер.<BR>Если нет ответа, то сделайте то же самое со вторым (резервным) номером. Написать надо сумму, которую Вы подсчитали.</LI><LI>Оплата осуществляется по номеру телефона через приложение банка Тинькофф, Альфа Банка или Сбера. Надо оплатить покупку, а затем удостоверить один из номеров, что покупка оплачена.</LI></P>
-</BR>
+<BR>
 <P>Creator: Dreiblatte Ivan Alexandrovich</P>
 <P>© 2022-2023</P>
 </BODY>
