--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@ ALINK = "Blue"
 VLINK = "Blue">
 <H1 ALIGN = "CENTER">Выберите предмет</H1>
 <HR>
-<DIV CLASS = "maths" onclick = "alert('Напишите/позвоните на номер +79851625561. Резервный: +79152668299')"><H1>Математика</H1><H2>Цена за пример/уравнение: 5₽. Цена за простую задачу: 5₽. Цена за сложную задачу: 10₽. Цена за ДКР: 15₽.</H2></DIV>
-<DIV CLASS = "algebra" onclick = "alert('Напишите/позвоните на номер +79851625561. Резервный: +79152668299')"><H1>Алгебра</H1><H2>Цена за пример/уравнение/составление уравнения и т. д.: 5₽. Цена за задачу: 6₽. Цена за построение координатной плоскости: 4₽. Цена за ДКР: 15₽.</H2></DIV>
-<DIV CLASS = "russian" onclick = "alert('Напишите/позвоните на номер +79851625561. Резервный: +79152668299')"><H1>Русский язык</H1><H2>Цена за корректирование/вставление буквы/подпись характеристик слова: 5₽. При прибавлении слова цена увеличивается на 2₽. Цена за 1/2/3 разбор слова или 4 разбор предложения: 7₽. Цена за сочинение/изложение: 12₽. Цена за ДКР: 15₽.</H2></DIV>
 <DIV CLASS = "chemistry" onclick = "alert('Напишите/позвоните на номер +79851625561. Резервный: +79152668299')"><H1>Химия</H1><H2>Цена за уравнение реакции/определения его типа/уравнивание частей: 5₽. Цена за простую химическую задачу: 6₽. Цена за сложную химическую задачу: 10₽. Цена за задачу на определение валентности/простановление по ней коэффициентов в элементе: 4₽. Цена за ДКР: 15₽.</H2></DIV>
+<DIV CLASS = "maths" onclick = "alert('Напишите/позвоните на номер +79851625561. Резервный: +79152668299')"><H1>Математика</H1><H2>Цена за пример/уравнение: 5₽. Цена за простую задачу: 5₽. Цена за сложную задачу: 10₽. Цена за ДКР: 15₽.</H2></DIV>
+<DIV CLASS = "russian" onclick = "alert('Напишите/позвоните на номер +79851625561. Резервный: +79152668299')"><H1>Русский язык</H1><H2>Цена за корректирование/вставление буквы/подпись характеристик слова: 5₽. При прибавлении слова цена увеличивается на 2₽. Цена за 1/2/3 разбор слова или 4 разбор предложения: 7₽. Цена за сочинение/изложение: 12₽. Цена за ДКР: 15₽.</H2></DIV>
+<DIV CLASS = "physics" onclick = "alert('Напишите/позвоните на номер +79851625561. Резервный: +79152668299')"><H1>Физика</H1><H2>Цена за решение простой задачи (например, требующей по одной формуле найти ответ): 5₽. Цена за решение задачи средней сложности (например, требующей найти несколько данных или на несколько тем): 7₽. Цена за решение сложной (например, олимпиадной) задачи: 11₽. Цена за помощь или решение в экспериментальной задаче: 8₽. Цена за ДКР: 15₽.</H2></DIV>
 <DIV CLASS = "geometry" onclick = "alert('Напишите/позвоните на номер +79851625561. Резервный: +79152668299')"><H1>Геометрия</H1><H2>Цена за решение простой задачи: 6₽. Цена за решение сложной задачи: 10₽. Цена за доказательство теоремы: 11₽. Цена за ДКР: 15₽.</H2></DIV>
+<DIV CLASS = "algebra" onclick = "alert('Напишите/позвоните на номер +79851625561. Резервный: +79152668299')"><H1>Алгебра</H1><H2>Цена за пример/уравнение/составление уравнения и т. д.: 5₽. Цена за задачу: 6₽. Цена за построение координатной плоскости: 4₽. Цена за ДКР: 15₽.</H2></DIV>
 <HR>
 Также, для удобства, здесь есть калькулятор. Вот он:
 <BR>
