--- a/index.html
+++ b/index.html
@@ -58,9 +58,8 @@ VLINK = "Blue">
 <P>Используя сайт, вы соглашаетесь на следующее:
 <BR>
 Сайт ТОЛЬКО на русском языке.<BR>
-Когда запрашивается номер карты НЕ НУЖНО скидывать секретные данные, достаточно только первых четырёх цифр из 16-ти значного номера.</BR>
 В случае неправильности решения, сообщите об этом по номеру телефона: +79851625561. Резервный номер: +79152668299. Возврат денег с комиссией 2₽. Если Вы позвонили, а решение оказалось правильным, с Вас требуется комиссия 2₽.</BR>
-За дополнительные требования к задаче с Вас требуется дополнительная плата 1₽.</BR>
+За дополнительные требования к задаче с Вас требуется дополнительная плата 1₽.<BR>
 Оплата осуществляется следующим образом:<OL><LI>Подсчитайте сумму в ₽, которую стоит Ваш вопрос.</LI><LI>Нажмите на кнопку предмета, по которому у Вас задание.</LI><LI>Вам выйдет 2 номера телефона. Напишите на первый номер через WhatsApp, если у Вас его нет, позвоните на этот номер.<BR>Если нет ответа, то сделайте то же самое со вторым (резервным) номером. Написать надо сумму, которую Вы подсчитали.</LI><LI>Оплата осуществляется по номеру телефона через приложение банка Тинькофф, Альфа Банка или Сбера. Надо оплатить покупку, а затем удостоверить один из номеров, что покупка оплачена.</LI></P>
 <BR>
 <P>Creator: Dreiblatte Ivan Alexandrovich</P>
