--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <HEAD>
 <TITLE>ГДЗ от 1 по 7 класс</TITLE>
 <link rel="stylesheet" href="style.css" type="text/css"/>
+<link rel="shortcut icon" href="icon.png" type="image/x-icon">
 </HEAD>
 <BODY
 ALINK = "Blue"
