--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <HTML>
 <HEAD>
-<TITLE>ГДЗ от 1 по 7 класс</TITLE>
-<link rel="stylesheet" href="style.css" type="text/css"/>
-<link rel="shortcut icon" href="icon.png" type="image/x-icon">
+<TITLE>ГДЗ c 1 по 7 класс</TITLE>
+<link rel = "stylesheet" href = "style.css" type = "text/css"/>
+<link rel = "shortcut icon" href = "icon.png" type = "image/x-icon">
 </HEAD>
 <BODY
 ALINK = "Blue"
@@ -19,17 +19,17 @@ VLINK = "Blue">
 <HR>
 Также, для удобства, здесь есть калькулятор. Вот он:
 <BR>
-<input id="num1" />
-<div id="operator_btns">
- <button id="plus" onclick="op='+'">+</button>
- <button id="minus" onclick="op='-'">-</button>
- <button id="times" onclick="op='*'">x</button>
- <button id="divide" onclick="op='/'">:</button>
+<input id = "num1"/>
+<div id = "operator_btns">
+ <button id = "plus" onclick = "op='+'">+</button>
+ <button id = "minus" onclick = "op='-'">-</button>
+ <button id = "times" onclick = "op='*'">x</button>
+ <button id = "divide" onclick = "op='/'">:</button>
 </div>
-<input id="num2" />
+<input id = "num2"/>
 <br>
-<button onclick="func()" >Посчитать</button>
-<p id="result"></p>
+<button onclick = "func()">Посчитать</button>
+<p id = "result"></p>
 <script>
  var op;
  function func() {
@@ -59,6 +59,7 @@ VLINK = "Blue">
 <P>Используя сайт, вы соглашаетесь на следующее:
 <BR>
 Сайт ТОЛЬКО на русском языке.<BR>
+ГДЗ до 7 класса включительно.<BR>
 В случае неправильности решения, сообщите об этом по номеру телефона: +79851625561. Резервный номер: +79152668299. Возврат денег с комиссией 2₽. Если Вы позвонили, а решение оказалось правильным, с Вас требуется комиссия 2₽.</BR>
 За дополнительные требования к задаче с Вас требуется дополнительная плата 1₽.<BR>
 Оплата осуществляется следующим образом:<OL><LI>Подсчитайте сумму в ₽, которую стоит Ваш вопрос.</LI><LI>Нажмите на кнопку предмета, по которому у Вас задание.</LI><LI>Вам выйдет 2 номера телефона. Напишите на первый номер через WhatsApp, если у Вас его нет, позвоните на этот номер.<BR>Если нет ответа, то сделайте то же самое со вторым (резервным) номером. Написать надо сумму, которую Вы подсчитали.</LI><LI>Оплата осуществляется по номеру телефона через приложение банка Тинькофф, Альфа Банка или Сбера. Надо оплатить покупку, а затем удостоверить один из номеров, что покупка оплачена.</LI></P>
